<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zcdirk.stockmarket.MainActivity">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/restaurant" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/title"
                android:textColor="@android:color/background_light"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/test_auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <AutoCompleteTextView
                android:id="@+id/quote_input"
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:layout_width="0sp"
                android:layout_height="51dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="@android:color/black"
                android:ems="10"
                android:inputType="textPersonName"
                android:popupBackground="@android:color/white"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <Button
                android:id="@+id/quote_button"
                android:layout_width="167dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:background="@android:color/transparent"
                android:onClick="onGetQuote"
                android:text="@string/get_quote_button"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/clear_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quote_input" />

            <Button
                android:id="@+id/clear_button"
                android:layout_width="152dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@android:color/transparent"
                android:onClick="onClear"
                android:text="@string/clear_button"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/quote_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/quote_button" />

            <TextView
                android:id="@+id/favorite_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:text="@string/favorites_text"
                android:textColor="@android:color/background_light"
                android:textSize="28sp"
                app:layout_constraintEnd_toStartOf="@+id/auto_switch"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quote_button" />

            <Switch
                android:id="@+id/auto_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onAuto"
                android:text="@string/autorefresh_button"
                android:textColor="@android:color/background_light"
                app:layout_constraintBaseline_toBaselineOf="@+id/favorite_text"
                app:layout_constraintEnd_toStartOf="@+id/refresh_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/favorite_text" />

            <Button
                android:id="@+id/refresh_button"
                android:layout_width="51dp"
                android:layout_height="45dp"
                android:background="@android:drawable/ic_popup_sync"
                android:onClick="onRefresh"
                app:layout_constraintBaseline_toBaselineOf="@+id/auto_switch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/auto_switch" />

            <Spinner
                android:id="@+id/sort_by_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:entries="@array/sort_by"
                android:popupBackground="@android:color/white"
                android:theme="@style/SpnStyle"
                app:layout_constraintEnd_toStartOf="@+id/order_spinner"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/favorite_text" />

            <Spinner
                android:id="@+id/order_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/order"
                android:popupBackground="@android:color/white"
                android:theme="@style/SpnStyle"
                app:layout_constraintBottom_toBottomOf="@+id/sort_by_spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/sort_by_spinner"
                app:layout_constraintTop_toTopOf="@+id/sort_by_spinner" />


        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <ListView
                android:id="@+id/favorite_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                tools:visibility="invisible" />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>


